# active-learning-lime

./: LAB03-rozwiązanie.ipynb  LAB03.ipynb  README.md  lime-tutorial-image-basic.ipynb  lime-tutorial-mnist.ipynb  lime-tutorial.ipynb  pyproject.toml  requirements.txt
