[tool.poetry]
name = "p11"
version = "0.1.0"
description = ""
authors = ["mlokos <mlokos.github@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
lime = "^0.2.0"
jupyter = "^1.0.0"
cifar10 = "^1.0.0"
emnist = "^0.0"
tensorflow = "^2.7.0"
tf-slim = "^1.1.0"
preprocessing = "^0.1.13"
scikit-image = "^0.18.3"
pandas = "^1.3.4"
torch = "^1.10.0"
torchvision = "^0.11.1"
jupyterlab = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
